<resources>
    <string name="settings_tab_launcher">Launcher</string>
    <string name="settings_carplay_controls">Display &amp; controls</string>
    <string name="settings_carplay">CarPlay settings</string>
</resources>
